extend quagga gencfg

--- a/nstools/templates/ospfd.conf
+++ b/nstools/templates/ospfd.conf
@@ -12,6 +12,9 @@ interface {{item['name']}}
 {% endfor %}
 !
 router ospf
+{%if cfg['ospf']['passive_interface'] %}
+  passive-interface {{ cfg['ospf']['passive_interface'] }}
+{%endif%}
 {% for item in cfg['route'] %}
   network {{item['prefix']}} area {{item['area']}}
 {% endfor %}
