generate config add interface-attributes and netowrk-areamap options

--- a/nstools/templates/ospfd.conf
+++ b/nstools/templates/ospfd.conf
@@ -1,22 +1,27 @@
-hostname {{cfg['router']}}
+hostname {{router}}
 password zebra
 enable password zebra
-log file /tmp/{{cfg['router']}}.log informational
+log file /tmp/{{router}}.log informational
 log stdout
 !
 interface lo
 !
-{% for item in cfg['interfaces'] %}
-interface {{item['name']}}
+{% for ifname, val in cfg['ifmap'].items() %}
+interface {{ifname}}
+{% if 'ospf_network' in val['attrs'] %}
+  ip ospf network {{val['attrs']['ospf_network']}}
+{% endif %}
 !
 {% endfor %}
 !
 router ospf
-{%if cfg['ospf']['passive_interface'] %}
-  passive-interface {{ cfg['ospf']['passive_interface'] }}
-{%endif%}
-{% for item in cfg['route'] %}
-  network {{item['prefix']}} area {{item['area']}}
+{% for ifname, val in cfg['ifmap'].items() %}
+{% if 'passive' in val['attrs'] %}
+  passive-interface {{ifname}}
+{% endif %}
+{% for nw in val['v4network'] %}
+  network {{nw['prefix']}} area {{nw['area']}}
+{% endfor %}
 {% endfor %}
 !
 line vty
