--- a/nstools/templates/zebra.conf
+++ b/nstools/templates/zebra.conf
@@ -1,15 +1,15 @@
-hostname {{cfg['router']}}
+hostname {{router}}
 password zebra
 enable password zebra
-log file /tmp/{{cfg['router']}}.log informational
+log file /tmp/{{router}}.log informational
 log stdout
 !
 interface lo
 !
-{% for item in cfg['interfaces'] %}
-interface {{item['name']}}
-{% for addr in item['v4'] %}
- ip address {{addr}}
+{% for ifname, val in cfg['ifmap'].items() %}
+interface {{ifname}}
+{% for addr in val['v4'] %}
+  ip address {{addr}}
 {% endfor %}
 !
 {% endfor %}
